--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,12 @@ description = "AUTO CREATE mAIL"
 version = "0.0.1"
 readme = "README.md"
 requires-python = ">=3.7"
-
+dependencies = ["fake_useragent",
+"fp",
+"free_proxy",
+"requests",
+"selenium",
+"selenium_wire",
+"webdriver_manager"]
 [project.urls]
 Homepage = "https://github.com/Sz3RO/Auto-Mail-Genaration"
